add_subdirectory(castattributes)
add_subdirectory(collection_models)
add_subdirectory(collection_relations)
add_subdirectory(model)
add_subdirectory(model_appends)
add_subdirectory(model_conn_indep)
add_subdirectory(model_hidesattributes)
add_subdirectory(model_qdatetime)
add_subdirectory(model_relations)
add_subdirectory(model_return_relation)
add_subdirectory(model_serialization)
add_subdirectory(queriesrelationships)
add_subdirectory(relations_buildsqueries)
add_subdirectory(relations_conn_indep)
add_subdirectory(relations_insrt_updt)
add_subdirectory(softdeletes)
add_subdirectory(tinybuilder)
